# agnes-is-free

./: .gitignore  CLAUDE.md  Cargo.toml
docs/superpowers/specs/: 2026-07-08-syntax-highlighting-design.md
src/: ai_client.rs  animation.rs  config.rs  image_gen.rs  input_box.rs  main.rs  markdown.rs  video_gen.rs  video_player.rs  video_task.rs
